--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Near Customers</string>
+    <string name="range">%1$sKm</string>
+    <string name="customers_count">%1$s Users</string>
 </resources>
